Version 3.0.3
-------------
Implement auto gamma correction.
Optimise communication with rendered plugins.
Fix new crashes with rendered effects generators.
Fix for multi_encoder3 looking for wrong (python2) sub encoders.
Improvements to RFX script builder tool.
Ensure audio is always rendered when it should be after recording.



Version 3.0.2 (7 Sep 2019)
--------------------------
Fix regression in okbutton handling which prevents encoding from actioning.
Display splash screen as early as possibley in startup.
Code correctness fixes.
Updated translations for Portuguese, Brazilian Portuguese (Nany Cavalcante)




Version 3.0.1 (13 Aug 2019)
---------------------------
Update package-config for libweed.
Fix hang after setting parameters with combo boxes for realtime effects.
Fix crashes in frei0r and ladspa wrappers.
Fix undefined values on startup and in swscale.
Improve "quick transcode" functionality.
Updated translations for Portuguese, Brazilian Portuguese (Nany Cavalcante)





Version 3.0.0 (7 Aug 2019)
-------------------------
Fix for "Delete Set" not removing files from disk.
Fix crash when selecting project directory with new install.
Fix crash when starting playback with some generators (e.g. plasma) [regression].
Fix to prevent spurious file removal when checking for plugins in a non-existent directory.
Fix occasional crash with audio driven video generators.
Load theme correctly on fresh installs.
Render silence to end of video if necessary during rendering.
Improvements to openGL playback plugin, including much smoother playback.
Re-enable Advanced options for the openGL playback plugin.
Allow "Enough" in VJ / Pre-decode all frames
Refactor code for timebase calculations during playback (better a/v synch).
Overhaul external audio and audio recording to improve accuracy and use fewer CPU cycles.
Auto switch to internal audio when entering multitack mode.
Show correct effects state (on / off) when reshowing effect mapper window.